hphp/hack/test/typecheck/is_expression/invalid_hint_void.php.exp
File "invalid_hint_void.php", line 4, characters 16-19:
The void typehint can only be used to describe a function return type (Naming[2063])
