hphp/hack/test/typecheck/is_expression/invalid_hint_void.php
<?hh // strict

function foo(mixed $x): bool {
  return $x is void;
}
